# python-apple-fm-sdk

./: .gitignore  .swift-format  ARCHITECTURE.md  MANIFEST.in  README.md  build_backend.py  pyproject.toml
docs/: Makefile  README.md  requirements.txt
docs/source/: basic_usage.rst  conf.py  evaluation.rst  getting_started.rst  guided_generation.rst  index.rst  streaming.rst  tools.rst
docs/source/_static/: custom.css
docs/source/api/: errors.rst  generable.rst  session.rst  systemmodel.rst  tools.rst  transcript.rst
examples/: simple_inference.py  streaming_example.py  transcript_processing.py
foundation-models-c/Sources/FoundationModelsCBindings/: FoundationModelsCBindings.swift
foundation-models-c/Sources/FoundationModelsCBindings/include/: FoundationModels.h
foundation-models-c/Sources/fm-c-example/: main.c
src/apple_fm_sdk/: __init__.py  core.py  generable_utils.py  session.py  transcript.py
tests/: README.md  conftest.py  test_error_handling.py  test_generable_protocol.py  test_guided_generation.py  test_guides.py  test_json_guided_generation.py  test_memory.py  test_memory_stress.py  test_prompts.py  test_session.py  test_streaming.py  test_tool.py  test_transcript.py
tests/doc_tests/: test_doc_website_snippets.py  test_readme_snippets.py  test_symbol_docs_core.py  test_symbol_docs_generable_utils.py  test_symbol_docs_generation_guide.py  test_symbol_docs_session.py  test_symbol_docs_tool.py  test_symbol_docs_transcript.py
tests/tester_schemas/: age.json  cat.json  hedgehog.json  newsletter.json  person.json  petClub.json  schemas.swift  shelter.json  test_transcript.json  test_transcript_full.json
tests/tester_tools/: tester_tools.py
